@@ -1,3 +1,7 @@
+2010-10-19  Martin Rubey  <martin.rubey@math.uni-hannover.de>
+
+	* contrib/emacs/fricas.el: repair fricas-up-input
+
 2010-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/combfunc.spad.pamphlet,
